--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -17,18 +17,18 @@
 
         <EditText
             android:id="@+id/login_number"
-            android:inputType="phone"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/login_num_side"
             android:layout_marginRight="@dimen/login_num_side"
             android:layout_marginTop="@dimen/login_icon_top"
-            android:hint="@string/login_num" />
+            android:hint="@string/login_num"
+            android:inputType="phone" />
 
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical" >
+            android:gravity="center_vertical">
 
             <EditText
                 android:id="@+id/login_pwd"
@@ -44,8 +44,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/display_password"
                 android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/display_password"
                 android:button="@drawable/login_icon_checked"
                 android:checked="false" />
 
@@ -54,7 +54,7 @@
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical" >
+            android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/tv_forget_pwd"
@@ -69,10 +69,10 @@
             android:id="@+id/bt_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/login_num_side"
-            android:background="@drawable/shape_borderline_bluefull"
             android:layout_marginLeft="@dimen/login_num_side"
             android:layout_marginRight="@dimen/login_num_side"
+            android:layout_marginTop="@dimen/login_num_side"
+            android:background="@drawable/shape_borderline_bluefull"
             android:text="@string/login" />
     </LinearLayout>
 
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center_horizontal"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -91,68 +91,40 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/login_num_side"
             android:layout_marginBottom="@dimen/login_num_side"
+            android:layout_marginTop="@dimen/login_num_side"
             android:gravity="center_horizontal"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:id="@+id/ll_weixin"
+            <TextView
+                android:id="@+id/tv_weixin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
                 android:layout_marginRight="@dimen/login_num_side"
-                android:orientation="vertical" >
+                android:drawableTop="@drawable/login_icon_weixin"
+                android:gravity="center"
+                android:text="@string/login_weixin" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/login_icon_weixin" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/login_weixin" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_qq"
+            <TextView
+                android:id="@+id/tv_qq"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:layout_marginLeft="@dimen/login_num_side"
                 android:layout_marginRight="@dimen/login_num_side"
-                android:orientation="vertical" >
+                android:layout_marginLeft="@dimen/login_num_side"
+                android:drawableTop="@drawable/login_icon_qq"
+                android:gravity="center"
+                android:text="@string/login_qq" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/login_icon_qq" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/login_qq" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_xinlang"
+            <TextView
+                android:id="@+id/tv_sina"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
                 android:layout_marginLeft="@dimen/login_num_side"
-                android:orientation="vertical" >
+                android:drawableTop="@drawable/login_icon_xinlang"
+                android:gravity="center"
+                android:text="@string/login_xinlang" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/login_icon_xinlang" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/login_xinlang" />
-            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
