--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,13 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.android.manba.activity.MainActivity" >
 
-    <Button
-        android:id="@+id/bt_login"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login" />
-    <Button
-        android:id="@+id/bt_regist"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/regist" />
-    
-    <Button
-        android:id="@+id/bt_home"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="主页" />
+    <ImageView
+        android:id="@+id/iv_welcome"
+        android:scaleType="fitXY"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-</LinearLayout>
+</RelativeLayout>
