--- a/app/src/main/res/layout/view_action_title.xml
+++ b/app/src/main/res/layout/view_action_title.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="30dp"
+    android:layout_height="@dimen/common_title_height"
     android:gravity="center_vertical" >
 
     <ImageView
         android:id="@+id/iv_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="20dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/login_num_side"
         android:src="@drawable/nav_icon_back" />
@@ -19,6 +19,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:visibility="gone"
+        android:textSize="@dimen/large_textsize"
         android:text="123" />
 
     <ImageView
