--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="regist_lingyu_weight">120dp</dimen>
 
     <dimen name="icon_width">70dp</dimen>
+    <dimen name="icon_sex_width">20dp</dimen>
     <dimen name="home_to_side">5dp</dimen>
 
     <dimen name="home_to_topside">20dp</dimen>
@@ -22,7 +23,10 @@
 
     
     <dimen name="common_to_side">10dp</dimen>
-    
+
+    <!--  顶部导航高度 -->
+    <dimen name="common_title_height">40dp</dimen>
+
     <dimen name="common_text_side">5dp</dimen>
     <dimen name="common_to_top">15dp</dimen>
     <dimen name="gonghui_icon_width">65dp</dimen>
@@ -42,5 +46,15 @@
     <!--  首页新鲜栏目  -->
     <dimen name="new_item_height">180dp</dimen>
     <dimen name="new_item_side">100dp</dimen>
+
+    <!--   首页点击条目界面   -->
+    <dimen name="person_bg_height">180dp</dimen>
+    <dimen name="person_icon_width">70dp</dimen>
+    <dimen name="person_icon_margin">-35dp</dimen>
+    <dimen name="person_icon_margin_right">15dp</dimen>
+    <dimen name="person_name_margin_top">-5dp</dimen>
+
+    <!--   大图界面   -->
+    <dimen name="image_height">500dp</dimen>
 
 </resources>
