--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:background="@android:color/background_dark">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"></android.support.v4.view.ViewPager>
+
     <TextView
         android:id="@+id/tv_view"
         android:layout_width="wrap_content"
@@ -15,17 +21,10 @@
 
     <ImageView
         android:id="@+id/image_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/image_menu_icon_height"
+        android:layout_height="@dimen/image_menu_icon_height"
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/common_to_side"
-        android:layout_marginTop="@dimen/common_to_side"
         android:src="@drawable/details_icon_more" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager_image"
-        android:layout_width="match_parent"
-        android:layout_centerInParent="true"
-        android:layout_height="@dimen/image_height"></android.support.v4.view.ViewPager>
 
 </RelativeLayout>
