--- a/app/src/main/res/layout/activity_shoucang.xml
+++ b/app/src/main/res/layout/activity_shoucang.xml
@@ -15,7 +15,7 @@
         android:background="@drawable/divider"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_wallet"
+        android:id="@+id/rv_shoucang"
         android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
