--- a/app/src/main/res/layout/item_shoucang.xml
+++ b/app/src/main/res/layout/item_shoucang.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/common_to_top"
+    android:layout_marginTop="@dimen/common_to_side"
+    android:background="@android:color/background_light"
     android:orientation="vertical">
 
     <LinearLayout
@@ -42,10 +44,11 @@
             android:layout_height="@dimen/shouc_content_pic"
             android:src="@drawable/test_01"/>
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:maxLines="3"
             android:layout_marginLeft="@dimen/common_to_side"
             android:text="123"/>
 
