--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -15,82 +15,108 @@
             android:layout_height="wrap_content" >
         </com.minyou.manba.ui.ActionTitleView>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="@dimen/common_to_side"
+            android:text="@string/regist_welcome"
+            android:textColor="@color/colorCommon"
+            android:textSize="@dimen/large_textsize"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingRight="@dimen/regist_padding_to_side"
-            android:orientation="horizontal" >
+            android:orientation="vertical" >
 
             <ImageView
                 android:id="@+id/iv_regist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/display_password"
+                android:visibility="gone"
                 android:src="@drawable/register_home_pre" />
 
             <EditText
                 android:id="@+id/et_nicheng"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/display_password"
                 android:layout_marginRight="@dimen/regist_padding_to_side"
                 android:layout_weight="1"
-                android:hint="@string/regist_nicheng" >
-            </EditText>
+                android:hint="@string/regist_nicheng" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="@dimen/display_password"
+                android:layout_marginRight="@dimen/regist_padding_to_side"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/et_sms"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+
+                    android:layout_weight="1"
+                    android:hint="@string/regist_yanzhengma" />
+                <TextView
+                    android:id="@+id/tv_send_sms"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:background="@drawable/shape_borderline_bluefull"
+                    android:textColor="@android:color/white"
+                    android:text="@string/regist_getyanzhengma"/>
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/et_mima"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/display_password"
+                android:layout_marginRight="@dimen/regist_padding_to_side"
+                android:layout_weight="1"
+                android:hint="@string/regist_mima" />
         </LinearLayout>
 
-        <LinearLayout
+        <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:orientation="horizontal" >
+            android:layout_margin="@dimen/common_to_top"
+            android:orientation="horizontal">
 
-            <LinearLayout
+            <RadioButton
+                android:id="@+id/rb_sex_man"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="40dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/shape_borderline_blue"
-                android:orientation="horizontal"
+                android:button="@null"
+                android:drawableLeft="@drawable/select_regist_man"
+                android:background="@drawable/select_side_line"
+                android:drawablePadding="@dimen/common_to_side"
                 android:paddingLeft="@dimen/regist_padding_to_side"
-                android:paddingRight="@dimen/regist_padding_to_side" >
+                android:paddingRight="@dimen/regist_padding_to_side"
+                android:text="@string/regist_man"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/register_cion_man" />
-
-                <TextView
-                    android:id="@+id/tv_regist_man"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/regist_text_to_pic"
-                    android:text="@string/regist_man" />
-            </LinearLayout>
-
-            <LinearLayout
+            <RadioButton
+                android:id="@+id/rb_sex_women"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/shape_borderline_fen"
-                android:orientation="horizontal"
+                android:layout_marginLeft="20dp"
+                android:button="@null"
+                android:drawablePadding="@dimen/common_to_side"
+                android:drawableLeft="@drawable/select_regist_woman"
+                android:background="@drawable/select_regist_sex_woman"
                 android:paddingLeft="@dimen/regist_padding_to_side"
-                android:paddingRight="@dimen/regist_padding_to_side" >
+                android:paddingRight="@dimen/regist_padding_to_side"
+                android:text="@string/regist_woman"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/register_cion_man" />
+        </RadioGroup>
 
-                <TextView
-                    android:id="@+id/tv_regist_woman"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/regist_text_to_pic"
-                    android:text="@string/regist_woman" />
-            </LinearLayout>
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -227,6 +253,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tv_regist"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -235,6 +262,7 @@
         android:layout_marginRight="@dimen/display_password"
         android:background="@drawable/shape_borderline_bluefull"
         android:gravity="center"
+        android:textColor="@android:color/white"
         android:text="@string/regist_finish" />
 
 </RelativeLayout>
